@@ -7,6 +7,8 @@ Release 0.8.4
 * fix to prevent a rare crash while loading too sparse overlaps
 * fix a bug with the new dip method in python 2.7
 * add the thresholding method to extract only MUA activity (requested by users)
+* memory usage is dynamically adapted to reduce memory footprint
+* hdf5 and npy file format can now work with 3D arrays (x, y, time) or (time, x, y)
 
 =============
 Release 0.8.3
